<resources>
    <string name="app_name">Putyom</string>
    <string name="action_add">Set smart sign</string>
    <string name="action_remove">Set smart sign</string>
    <string name="grant">Grant</string>
    <string name="extract_position">Permissions required to show your position on map</string>
    <string name="title_activity_set_device">Setup Device</string>
    <string name="cancelled">Cancelled</string>
    <string name="title_activity_remove_device">Remove Device</string>
    <string name="find_me">Find me</string>
    <string name="update_map">Update map</string>
    <string name="plan">Plan:</string>
    <string name="address">Address:</string>
    <string name="second_sign">Second sign</string>
    <string name="first_sign">First sign</string>
    <string name="fact">Fact:</string>
    <string name="activate_first">Activate first</string>
    <string name="activate_second">Activate second</string>
</resources>
